--- a/lib/templates/default_ssh_config.erb
+++ b/lib/templates/default_ssh_config.erb
@@ -1,6 +1,10 @@
 ##########################################
-# ey cloud environments
+ServerAliveInterval 60
+  ServerAliveCountMax 3
+
 StrictHostKeyChecking no
+
+GatewayPorts yes 
 
 <% @hosts.keys.sort.each do |name| %>
 Host <%= name %>
